added counting javascript

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="counter_bellissimo_pizza">
                     <div class="minus_bellissimo_pizza" onclick="minus()">-</div>
                     <div class="digit_bellissimo_pizza" id="count">1</div>
-                    <div class="plus_bellissimo_pizza"  onclick="plus()">+</div>
+                    <div class="plus_bellissimo_pizza" onclick="plus()">+</div>
                 </div>
 
 
@@ -147,10 +147,15 @@
 
             </div>
 
+        </div>
+
+        <div class="couting_number">
+            <p class="total_price">Итого:</p>
+            <p class="cost">0 сум</p>
         </div> -->
 
     </div>
-    
+
 
     <script src="modules/db.js"></script>
     <script src="script.js"></script>
